# kord

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  EXPERIMENTS.md  LICENSE  Makefile.toml  README.md  build.rs  chord.pest  rust-toolchain  rust-toolchain.toml  rustfmt.toml  wasmer.toml
.devcontainer/: devcontainer.json
.github/: build.yml  copilot-instructions.md
.github/workflows/: build.yml  copilot-setup-steps.yml
docker/: Dockerfile
docs/: CNAME  index.html  kord-client-ef297e24bcfa74c4.js  kord-client-ef297e24bcfa74c4_bg.wasm
docs/snippets/kord-client-c73f4d9db6fa3131/: helpers.js
kord/: Cargo.toml  build.rs  chord.pest
kord-web/: Cargo.toml  LICENSE  README.md  build-and-run.sh  spin.toml
kord-web-native/: Cargo.toml  README.md
kord-web-native/src/: api.rs  app.rs  lib.rs  main.rs
kord-web/docker/: Dockerfile
kord-web/src/: api.rs  app.rs  ffi.js  ffi.rs  lib.rs  main.rs  mic.rs  server.rs  shared.rs
kord-web/src/app/: about.rs  describe.rs  docs.rs  guess.rs  home.rs  listen.rs  mod.rs  piano.rs  piano_kb_impl.rs  piano_kb_shim.rs  shared.rs
kord-web/src/client/: audio.rs  ffi.js  ffi.rs  ffi_impl.rs  ffi_shim.rs  helpers.rs  mod.rs
kord-web/src/client/piano/: keyboard_impl.rs  keyboard_shim.rs  mod.rs
kord-web/src/client/shared/: mod.rs
kord-web/style/: main.scss
kord-web/tests/: web.rs
kord/model/: model_config.json  thresholds.json
kord/src/: bin.rs  helpers.rs  lib.rs  wasm.rs
kord/src/analyze/: base.rs  file.rs
kord/src/core/: base.rs  chord.rs  helpers.rs  interval.rs  known_chord.rs  mod.rs  mode.rs  mode.rs.backup  mode_kind.rs  modifier.rs  named_pitch.rs  notation.rs  note.rs  octave.rs  parser.rs  pitch.rs  scale.rs  scale_kind.rs
kord/src/ml/: mod.rs
kord/src/ml/base/: data.rs  gather.rs  helpers.rs  mlp.rs  mod.rs  model.rs  precision.rs  process.rs
kord/src/ml/infer/: execute.rs  mod.rs
kord/src/ml/train/: data.rs  execute.rs  helpers.rs
model/: model_config.json  state.bincode
src/: analyze.rs  base.rs  bin.rs  chord.rs  debug.rs  helpers.rs  interval.rs  known_chord.rs  lib.rs  listen.rs  modifier.rs  named_pitch.rs  note.rs  octave.rs  parser.rs  pitch.rs  wasm.rs
src/analyze/: base.rs  file.rs  mic.rs  mod.rs
src/core/: base.rs  chord.rs  helpers.rs  interval.rs  known_chord.rs  mod.rs  modifier.rs  named_pitch.rs  note.rs  octave.rs  parser.rs  pitch.rs
src/ml/: base.rs  gather.rs  mod.rs
src/ml/base/: data.rs  gather.rs  helpers.rs  mlp.rs  mod.rs  model.rs
src/ml/infer/: execute.rs  mod.rs
src/ml/train/: base.rs  data.rs  execute.rs  gather.rs  helpers.rs  mlp.rs  mod.rs  model.rs
tests/: Am.flac
