[package]
name = "kord"
version = "0.3.0"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "A tool to easily explore music theory principles."
readme = "README.md"
homepage = "https://github.com/twitchax/kord"
repository = "https://github.com/twitchax/kord"
keywords = ["cli", "music", "theory", "jazz", "chords"]
categories = ["command-line-utilities"]

[features]
default = ["cli", "playback"]
cli = ["clap"]
playback = ["rodio"]

[lib]
name = "klib"
path = "src/lib.rs"

[[bin]]
name = "kord"
path = "src/bin.rs"
required-features = ["cli"]

[dependencies]
once_cell = "1.16.0"
paste = "1.0.9"
clap = { version = "4.0.29", features = ["derive"], optional = true }
anyhow = "1.0.66"
rodio = { version = "0.16.0", default-features = false, optional = true }
pest = "2.5.1"
pest_derive = "2.5.1"

[dev-dependencies]
pretty_assertions = "1.3.0"