[package]
name = "kord"
version = "0.5.0"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "A tool to easily explore music theory principles."
readme = "README.md"
homepage = "https://github.com/twitchax/kord"
repository = "https://github.com/twitchax/kord"
keywords = ["cli", "music", "theory", "jazz", "chords"]
categories = ["command-line-utilities"]

[features]
default = ["cli", "analyze", "ml_infer", "audio"]

cli = ["clap", "futures"]

audio = ["rodio"]

analyze = ["analyze_mic", "analyze_file"]
analyze_base = ["rustfft"]
analyze_mic = ["analyze_base", "rodio", "cpal", "futures-timer"]
analyze_file = ["analyze_base", "rodio", "symphonia", "parse_duration0"]

analyze_file_mp3 = ["symphonia/mp3"]
analyze_file_aac = ["symphonia/aac", "symphonia/isomp4"]
analyze_file_alac = ["symphonia/alac", "symphonia/isomp4"]

ml = ["ml_train", "ml_infer"]
ml_base = ["serde", "byteorder", "burn", "burn-ndarray"]
ml_train = ["ml_base", "rand", "burn-autodiff"]
ml_infer = ["ml_base"]
ml_gpu = ["ml_train", "burn-tch"]

wasm = ["rodio/wasm-bindgen"]

plot = ["plotters"]

[lib]
name = "klib"
path = "src/lib.rs"

[[bin]]
name = "kord"
path = "src/bin.rs"
required-features = ["cli"]

[dependencies]
async-trait = "0.1.64"
once_cell = "1.16.0"
paste = "1.0.9"
anyhow = "1.0.66"
pest = "2.5.1"
pest_derive = "2.5.1"

symphonia = { version = "0.5.2", optional = true }
parse_duration0 = { version = "3.0.0", optional = true }

# cli
clap = { version = "4.0.29", features = ["derive"], optional = true }
futures = { version = "0.3.25", optional = true }

# audio
rodio = { version = "0.16.0", default-features = false, features = ["symphonia"],  optional = true }

# analyze_base
rustfft = { version = "6.1.0", optional = true }

# analyze
futures-timer = { version = "3.0.2", optional = true }
cpal = { version = "0.15.0", optional = true }

# ml
burn = { version = "0.5.0", optional = true }
burn-autodiff = { version = "0.5.0", optional = true }
burn-tch = { version = "0.5.0", optional = true }
burn-ndarray = { version = "0.5.0", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
rand = { version = "0.8.4", optional = true }
byteorder = { version = "1.4.3", optional = true }

# plot
plotters = { version = "0.3.4", optional = true }

[dev-dependencies]
pretty_assertions = "1.3.0"
